--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     {
       //區域變數n1
       num2 = Math.ceil(Math.random()*13)
-      imghost.src = "poker/"   +    num2   +   ".GIF" 
+      imghost.src = "poker/"   +    num2   +   ".gif" 
       winlose()
     }
 
